--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "styled-components": "^6.0.0-rc.6"
+    "styled-components": "^6.0.0-rc.6",
+    "styled-reset": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
